packages/cashc/test/compiler/ParseError/unterminated_member.cash
contract Test() {
    return {
        hello(bytes a) {
            bytes b = a.reverse(
            require(b == a);
        }
    }
}
